--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     flex-wrap: wrap;
     align-content: space-around;
+    border: solid black 8px;
 }
 body{
     display: flex;
